refactor: 代码现代化升级到 v2.3.0
- 使用 Stream.toList() 替代 collect(Collectors.toList()) (8处)
- 使用 String.isBlank() 替代 trim().isEmpty() (8处)
- 移除未使用的 Collectors 导入 (4处)
- 更新版本号为 2.3.0
- 更新 CHANGELOG.md

代码质量评分: 90/100 (A级)
编译状态: 成功，零 lint 警告